--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "localhost:1313"
+baseURL = "https://fdvdberg.netlify.app/"
 languageCode = "en-us"
 title = "My Portfolio Website"
 theme = "hugo-lodi-theme"
