--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "themes/hugo-lodi-theme"]
+	path = themes/hugo-lodi-theme
+	url = https://github.com//xaviablaza/hugo-lodi-theme.git
