--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,16 @@
 baseURL = "https://fdvdberg.netlify.app/"
 languageCode = "en-us"
-title = "My Portfolio Website"
+title = "Florem Ipsum"
 theme = "hugo-lodi-theme"
 googleAnalytics = "UA-XXXXXXXX-Y"
 
 [params]
     theme_color = "#EEBC40"
-    description = "Portfolio of Alexis Collado, UX Designer"
+    description = "Portfolio of Floris van den Berg"
     description_photo = "portfolio.jpg"
     favicon = "favicon.png"
     logo = "logo.png"
-    email = "myemail@gmail.com"
+    email = "fdvandenberg@gmail.com"
     twitter = "lexiscollado"
     dribbble = "alexiscollado"
     linkedin = "https://www.linkedin.com/in/alexander-hans-collado-jr-9444146a"
