--- a/config.toml
+++ b/config.toml
@@ -22,12 +22,12 @@ googleAnalytics = "UA-XXXXXXXX-Y"
     enable = true
     avatar = "/avatar.jpg"
     subtitle = "Hi! I'm Floris, a UX Writer & Content Creator."
-    hero_right = ["**Currently doing consultancy work at UX Society. Previously doing UX and product at Agoda in Bangkok, Thailand as an international intern.**", "I founded [User Experience Society](https://www.facebook.com/UXSoc/), the first student UX organization in the Philippines. For two years, we've had 20+ events with 30+ speakers for over 300 members and 500+ attendees. We've expanded to [California](https://www.facebook.com/profile.php?id=245708449193012) this year.", "I do a bit of writing as well. [Here's an article with a total of 21,000+ views to InVision & Medium](http://blog.invisionapp.com/ux-internship-wisdom/) talking about 50 things I learned spending 3 years as a UX intern.", "I help cultivate the design community in Manila too. I'm the youngest core member of [UX Philippines](https://www.facebook.com/groups/uxphilippines/) and I moderated a panel with some cool people for the [UXPH 2017 Conference](https://www.uxphilippines.com).", "I'm finishing my Bachelor's degree in Management Information Systems at the Ateneo de Manila University, expecting to graduate in 2018."]
+    hero_right = ["**I am a Content Designer and UX Writer who’s obsessed with language and user understanding. I love solving complex problems, creating joyful experiences, and educating on brandvoice.**", "Currently I work as Lead Digital Copywriter at Allianz Direct, a new Pan-European Allianz label. I am in charge of interface copy and across all digital platforms. I own the writing process from end to end, collaborating with product owners, engineers, designers, and many others to bring user experiences to life. I write copy for a number of channels and formats such as website, portal, email, and online ads.", "I bring a lot of experience: for 15+ years I have worked at large advertising agencies and global brands, always creating impact through design and copy.", "**A data-driven idea generator.**", "Data is the foundation of everything I do. I love to combine insights with creativity. Note: I use data to touch, not to target people. I am very curious, want to know everything. What my fellow writers and designers are up to, but especially how I can help customers to get what they need. Truly ‘customer obsessed’.", "**A trusted part of your team.**", "You don't have time to mess around. You need someone who knows how to move people to action and get results that positively affect revenue, at every stage of the journey. These people trusted me to be that guy."]
     resume = "ResumeCollado.pdf"
 
 [params.process]
     enable = true
-    title = "My Process"
+    title = "My Services"
     subtitle = "Full Process Design"
 
 [params.case_studies]
