--- a/data/process/design.yaml
+++ b/data/process/design.yaml
@@ -1,4 +1,4 @@
 weight: 3
-title: "Design"
+title: "Content Design"
 icon: "ui.svg"
 description: "I design delightful, purposeful interactions and interfaces that help the user accomplish his or her tasks."
