--- a/data/process/iteration.yaml
+++ b/data/process/iteration.yaml
@@ -1,4 +1,4 @@
 weight: 5
-title: "Iteration"
+title: "Chatbot Copy"
 icon: "wand.svg"
 description: "I perform research through series of usability tests and A/B testing, evaluate design with analytics, and iterate."
