--- a/data/process/research.yaml
+++ b/data/process/research.yaml
@@ -1,4 +1,4 @@
 weight: 1
 title: "UX Writing"
 icon: "uxwriting.svg"
-description: "I collaborate with stakeholders, ask meaningful questions, probe user goals, motivations, to understand context."
+description: "I create clear, concise, and consistent copy for your interfaces to help your users reach specific goals."
