--- a/data/process/design.yaml
+++ b/data/process/design.yaml
@@ -1,4 +1,4 @@
 weight: 3
 title: "Content Design"
 icon: "ui.svg"
-description: "I design delightful, purposeful interactions and interfaces that help the user accomplish his or her tasks."
+description: "Give your business a competitive edge with powerful content that can be targeted to any segment of your audience."
