--- a/data/process/development.yaml
+++ b/data/process/development.yaml
@@ -1,4 +1,4 @@
 weight: 4
 title: "Brand Voice"
 icon: "closetag.svg"
-description: "I prototype the final design either in code (HTML, CSS, JS), InVision, Framer Studio or other tools depending on the job."
+description: "People want to buy from brands when they feel an emotional connection. Brand voice shows your human side."
