--- a/data/process/development.yaml
+++ b/data/process/development.yaml
@@ -1,4 +1,4 @@
 weight: 4
 title: "Brand Voice"
-icon: "closetag.svg"
+icon: "brandvoice.svg"
 description: "People want to buy from brands when they feel an emotional connection. Brand voice shows your human side."
