--- a/data/process/discovery.yaml
+++ b/data/process/discovery.yaml
@@ -1,4 +1,4 @@
 weight: 2
 title: "Website Copy"
-icon: "rulerpencil.svg"
+icon: "websitecopy.svg"
 description: "Let me write the copy that guides users every step of the way from discovery, to consideration, to conversion."
