--- a/data/process/iteration.yaml
+++ b/data/process/iteration.yaml
@@ -1,4 +1,4 @@
 weight: 5
 title: "Chatbot Copy"
-icon: "wand.svg"
+icon: "conversation.svg"
 description: "It is all about shaping interactions between humans and machines to resemble an actual conversation."
