--- a/data/process/repeat.yaml
+++ b/data/process/repeat.yaml
@@ -1,4 +1,4 @@
 weight: 6
 title: "Internal Branding"
-icon: "repeat.svg"
+icon: "internalbranding.svg"
 description: "I redo the entire process and use new insights to further bolster the product’s user experience."
